--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
         
     </div>
     <button onclick="edit()" class="edit">Edit</button>
+    <script src="script.js"></script>
 
 </body>
 </html>
